[package]
name = "perbackup"
version = "0.1.0"
authors = ["Kevin Darlington <kevin@outroot.com>"]

[dependencies]
time = "0.1"
winapi = "0.2"
kernel32-sys = "0.2"
kernel32x = { path = "lib/kernel32x" }
powrprofx = { path = "lib/powrprofx" }
simplelog = "0.1"
log = "0.3"
shlex = "0.1.1"
ctrlc = { version = "3.0", features = ["termination"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
